# shadowsocks

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
cmake/: BuildVariables.cmake  FeatureCheck.cmake
include/: config.h.in
include/shadowsocks/: ss_buffer.h  ss_client.h  ss_config.h  ss_core.h  ss_crypto.h  ss_daemon.h  ss_exception.h  ss_logger.h  ss_network.h  ss_package.h  ss_selector.h  ss_server.h  ss_service.h  ss_session.h  ss_types.h  ss_utils.h
include/shadowsocks/client/: ss_client.h
include/shadowsocks/network/: ss_buffer.h  ss_network.h  ss_tcp_network.h  ss_tcp_session.h  ss_udp_network.h
include/shadowsocks/network/relay/: ss_tcp_relay.h  ss_udp_relay.h
include/shadowsocks/server/: ss_server.h
src/: shadowsocks.cc  ss_client.cc  ss_config.cc  ss_core.cc  ss_crypto.cc  ss_daemon.cc  ss_logger.cc  ss_selector.cc  ss_server.cc  ss_service.cc
src/client/: CMakeLists.txt  client.cc  shadowsocks-client.cc  ss_client.cc
src/lib/: ss_buffer.cc  ss_config.cc  ss_core.cc  ss_crypto.cc  ss_daemon.cc  ss_exception.cc  ss_logger.cc  ss_network.cc  ss_package.cc  ss_selector.cc  ss_session.cc  ss_utils.cc
src/lib/network/: ss_buffer.cc  ss_network.cc  ss_tcp_network.cc  ss_tcp_relay.cc  ss_tcp_session.cc  ss_udp_network.cc
src/lib/network/relay/: ss_tcp_relay.cc  ss_udp_relay.cc
src/server/: CMakeLists.txt  server.cc  shadowsocks-server.cc  ss_server.cc
tests/python/: connect_test.py
tests/python/sstest/: network.py
